code_samples/27_network_policy/pods.yaml
# working-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend
spec:
  containers:
  - name: backend
    image: hashicorp/http-echo
    args:
      - "-text=hello"
    ports:
    - containerPort: 8080

---
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
  - name: frontend
    image: busybox
    command: ["sleep", "3600"]

---
apiVersion: v1
kind: Pod
metadata:
  name: random
  labels:
    app: random
spec:
  containers:
  - name: random
    image: busybox
    command: ["sleep", "3600"]
